// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collectNodes basic1 1`] = `
[
  {
    "type": "text",
    "value": "将进酒",
  },
  {
    "type": "text",
    "value": "君不见黄河之水天上来，奔流到海不复回。",
  },
  {
    "type": "text",
    "value": "
君不见高堂明镜悲白发，朝如青丝暮成雪。",
  },
  {
    "type": "text",
    "value": "
人生得意须尽欢，莫使金樽空对月。",
  },
  {
    "type": "text",
    "value": "
天生我材必有用，千金散尽还复来。",
  },
  {
    "type": "text",
    "value": "
烹羊宰牛且为乐，会须一饮三百杯。",
  },
  {
    "type": "text",
    "value": "
岑夫子，丹丘生，将进酒，杯莫停。",
  },
  {
    "type": "text",
    "value": "
与君歌一曲，请君为我倾耳听。",
  },
  {
    "type": "text",
    "value": "
钟鼓馔玉不足贵，但愿长醉不复醒。",
  },
  {
    "type": "text",
    "value": "
古来圣贤皆寂寞，惟有饮者留其名。",
  },
  {
    "type": "text",
    "value": "
陈王昔时宴平乐，斗酒十千恣欢谑。",
  },
  {
    "type": "text",
    "value": "
主人何为言少钱，径须沽取对君酌。",
  },
  {
    "type": "text",
    "value": "
五花马、千金裘，呼儿将出换美酒，与尔同销万古愁。",
  },
  {
    "type": "text",
    "value": "emphasis: ",
  },
  {
    "type": "text",
    "value": "foo "",
  },
  {
    "type": "text",
    "value": "bar",
  },
  {
    "type": "text",
    "value": "" foo",
  },
  {
    "type": "text",
    "value": "autolink(extension): ",
  },
  {
    "type": "text",
    "value": "http://example.com",
  },
  {
    "type": "text",
    "value": "autolink: ",
  },
  {
    "type": "text",
    "value": "foo@bar.example.com",
  },
  {
    "type": "text",
    "value": "Setext headings",
  },
  {
    "type": "text",
    "value": "Task List Items (extension):",
  },
  {
    "type": "text",
    "value": "foo",
  },
  {
    "type": "text",
    "value": "bar",
  },
  {
    "type": "text",
    "value": "baz",
  },
  {
    "type": "text",
    "value": "bim",
  },
  {
    "type": "text",
    "value": "This is a blockquote",
  },
  {
    "type": "text",
    "value": "with multiple lines.",
  },
  {
    "type": "text",
    "value": "This is a math block:",
  },
  {
    "type": "text",
    "value": "heading1",
  },
  {
    "type": "text",
    "value": "heading2",
  },
  {
    "type": "text",
    "value": "heading3",
  },
  {
    "type": "text",
    "value": "heading4",
  },
  {
    "type": "text",
    "value": "heading5",
  },
  {
    "type": "text",
    "value": "heading6",
  },
  {
    "type": "text",
    "value": "This is a footnote ",
  },
  {
    "type": "text",
    "value": "something....",
  },
  {
    "type": "text",
    "value": ".",
  },
  {
    "type": "text",
    "value": "This is a footnote definition.",
  },
  {
    "type": "text",
    "value": "This is a footnote reference ",
  },
  {
    "type": "text",
    "value": "Definitions:",
  },
  {
    "type": "text",
    "value": "logo",
  },
  {
    "type": "text",
    "value": "baz",
  },
  {
    "type": "text",
    "value": "
",
  },
  {
    "type": "text",
    "value": "logo",
  },
  {
    "type": "text",
    "value": " ",
  },
  {
    "type": "text",
    "value": "bar",
  },
  {
    "type": "text",
    "value": "
",
  },
  {
    "type": "text",
    "value": "logo",
  },
  {
    "type": "text",
    "value": "Guanghechen",
  },
  {
    "type": "text",
    "value": " is the author of yozora.",
  },
]
`;

exports[`collectNodes basic1 2`] = `
[
  {
    "children": [
      {
        "type": "text",
        "value": "君不见黄河之水天上来，奔流到海不复回。",
      },
      {
        "type": "break",
      },
      {
        "type": "text",
        "value": "
君不见高堂明镜悲白发，朝如青丝暮成雪。",
      },
      {
        "type": "break",
      },
      {
        "type": "text",
        "value": "
人生得意须尽欢，莫使金樽空对月。",
      },
      {
        "type": "break",
      },
      {
        "type": "text",
        "value": "
天生我材必有用，千金散尽还复来。",
      },
      {
        "type": "break",
      },
      {
        "type": "text",
        "value": "
烹羊宰牛且为乐，会须一饮三百杯。",
      },
      {
        "type": "break",
      },
      {
        "type": "text",
        "value": "
岑夫子，丹丘生，将进酒，杯莫停。",
      },
      {
        "type": "break",
      },
      {
        "type": "text",
        "value": "
与君歌一曲，请君为我倾耳听。",
      },
      {
        "type": "break",
      },
      {
        "type": "text",
        "value": "
钟鼓馔玉不足贵，但愿长醉不复醒。",
      },
      {
        "type": "break",
      },
      {
        "type": "text",
        "value": "
古来圣贤皆寂寞，惟有饮者留其名。",
      },
      {
        "type": "break",
      },
      {
        "type": "text",
        "value": "
陈王昔时宴平乐，斗酒十千恣欢谑。",
      },
      {
        "type": "break",
      },
      {
        "type": "text",
        "value": "
主人何为言少钱，径须沽取对君酌。",
      },
      {
        "type": "break",
      },
      {
        "type": "text",
        "value": "
五花马、千金裘，呼儿将出换美酒，与尔同销万古愁。",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "alt": "logo",
        "identifier": "logo",
        "label": "logo",
        "referenceType": "collapsed",
        "type": "imageReference",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "emphasis: ",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "foo "",
          },
          {
            "children": [
              {
                "type": "text",
                "value": "bar",
              },
            ],
            "type": "emphasis",
          },
          {
            "type": "text",
            "value": "" foo",
          },
        ],
        "type": "strong",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "autolink(extension): ",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "http://example.com",
          },
        ],
        "type": "link",
        "url": "http://example.com",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "autolink: ",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "foo@bar.example.com",
          },
        ],
        "type": "link",
        "url": "mailto:foo@bar.example.com",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "Task List Items (extension):",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "foo",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "type": "text",
                    "value": "bar",
                  },
                ],
                "status": "doing",
                "type": "listItem",
              },
              {
                "children": [
                  {
                    "type": "text",
                    "value": "baz",
                  },
                ],
                "status": "done",
                "type": "listItem",
              },
            ],
            "marker": 45,
            "ordered": false,
            "spread": false,
            "type": "list",
          },
        ],
        "status": "done",
        "type": "listItem",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "bim",
          },
        ],
        "status": "todo",
        "type": "listItem",
      },
    ],
    "marker": 45,
    "ordered": false,
    "spread": false,
    "type": "list",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "This is a blockquote",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "with multiple lines.",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "This is a math block:",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "This is a footnote ",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "something....",
          },
        ],
        "type": "footnote",
      },
      {
        "type": "text",
        "value": ".",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "This is a footnote definition.",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "This is a footnote reference ",
      },
      {
        "identifier": "foo-2",
        "label": "foo-2",
        "type": "footnoteReference",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "type": "text",
        "value": "Definitions:",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "logo",
          },
        ],
        "identifier": "bar",
        "label": "bar",
        "referenceType": "full",
        "type": "linkReference",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "baz",
          },
        ],
        "identifier": "baz",
        "label": "baz",
        "referenceType": "shortcut",
        "type": "linkReference",
      },
      {
        "type": "text",
        "value": "
",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "logo",
          },
        ],
        "identifier": "logo",
        "label": "logo",
        "referenceType": "shortcut",
        "type": "linkReference",
      },
      {
        "type": "text",
        "value": " ",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "bar",
          },
        ],
        "identifier": "baz",
        "label": "baz",
        "referenceType": "full",
        "type": "linkReference",
      },
      {
        "type": "text",
        "value": "
",
      },
      {
        "children": [
          {
            "type": "text",
            "value": "logo",
          },
        ],
        "identifier": "logo",
        "label": "logo",
        "referenceType": "collapsed",
        "type": "linkReference",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "alt": "logo",
        "identifier": "logo",
        "label": "logo",
        "referenceType": "collapsed",
        "type": "imageReference",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [
          {
            "type": "text",
            "value": "Guanghechen",
          },
        ],
        "title": "this is a link",
        "type": "link",
        "url": "https://github.com/guanghechen",
      },
      {
        "type": "text",
        "value": " is the author of yozora.",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "alt": "foo",
        "title": "guanghechen",
        "type": "image",
        "url": "https://avatars.githubusercontent.com/u/42513619?v=4",
      },
    ],
    "type": "paragraph",
  },
]
`;
